feat(web): add REST API for artifact generation